# Memoryforge

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session_start.sh  stop.sh
.github/workflows/: ci.yml  publish.yml
benchmarks/: locomo_benchmark.py  longmemeval_benchmark.py  stress_sessions.py  synthetic_test.py
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  RLM.md  SECOND_BRAIN_ROADMAP.md
memoryforge/: __init__.py  _core.py  runtime.py
memoryforge/agents/: __init__.py  codex_sync.py  operators.py  runners.py  subagents.py
memoryforge/api/: __init__.py  active_recall.py  app.py  context_assembly.py  context_builder.py  context_bundle.py  lcm_facade.py  lifecycle.py  memory_io.py  rlm_facade.py
memoryforge/benchmark/: __init__.py  adapter.py  locomo.py  longmemeval.py  secondbrain.py
memoryforge/cli/: __init__.py  commands.py  main.py  parser.py
memoryforge/db/: __init__.py  schema.py
memoryforge/init/: __init__.py  autoload.py  bootstrap.py  codex.py  hooks.py
memoryforge/lcm/: __init__.py
memoryforge/lcm/compaction/: __init__.py  compactor.py  engine.py  (+3 more)
memoryforge/mcp/: __init__.py  server.py  tools.py
memoryforge/memory/: __init__.py
memoryforge/rlm/: __init__.py  chunking.py  common.py  engine.py  records.py  runner.py  schema.py  search.py  storage.py  types.py
memoryforge/search/: __init__.py  fts.py  router.py  vector.py
scripts/: migrate_db.py  run_benchmarks.sh  setup_dev.sh
tests/: conftest.py  test_benchmark_metrics.py  test_chunking.py  test_cli.py  test_content_store.py  test_file_ids.py  test_hindsight_benchmarks.py  test_imports.py  test_init.py  test_integration.py  test_lcm.py  test_lcm_runtime.py  test_long_term_memory.py  test_mcp_tools.py  test_memory.py  test_package_layout.py  test_prompt_topology.py  test_real_subagents.py  test_rlm_pipeline.py  test_runtime_integration.py  test_secondbrain_benchmark.py  test_subagents.py  test_unified_query.py  test_vector.py
(+20 files in other folders)
