[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "memfg"
version = "6.0.6"
description = "Lossless Context Management for Recursive Language Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MemoryForge Contributors"}
]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP
    "mcp>=1.0.0",
    "anyio>=4.0",
    "tomli>=2.0; python_version < '3.11'",
    "fastembed>=0.5.0",
]

[project.optional-dependencies]
# Semantic embeddings are installed by default; keep the extra for compatibility.
embeddings = []

# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "twine>=5.0",
]

# Benchmarks
benchmark = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.0",
]

all = ["memfg[embeddings,dev,benchmark]"]

[project.scripts]
memoryforge = "memoryforge.cli:main"
memoryforge-mcp = "memoryforge.mcp.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["memoryforge"]

[tool.hatch.build.targets.sdist]
include = [
    "/memoryforge",
    "/tests",
    "/benchmarks/*.py",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/Makefile",
]
exclude = [
    "/benchmarks/results",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["memoryforge"]

[tool.coverage.report]
show_missing = true
fail_under = 77
